# mini-sqllineage

./: .gitignore  LICENSE  MANIFEST.in  README.md  dag_mermaid.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sqlh/: __init__.py  cli.py  utils.py
sqlh-rs/: Cargo.toml  README.md  bench.py  sql_splitter.py
sqlh-rs/src/: lib.rs  main.rs
sqlh/core/: graph.py  helper.py
sqlh/tests/: test_graph.py  test_import.py  test_sqlhelper.py  test_utils.py
sqllineage/: __init__.py  cli.py  utils.py
sqllineage/core/: graph.py  helper.py
sqllineage/static/: dagre_template.html  mermaid_template.html
sqllineage/tests/: test_cli.py  test_graph.py  test_import.py  test_sqlhelper.py  test_utils.py
