[project]
name = "mini-sqllineage"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sqlh = "sqllineage.cli:main"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = ""
module-name = "sqllineage"
