[project]
name = "mini-sqllineage"
version = "0.2.2"
description = "A lightweight SQL lineage analysis library for tracking table dependencies in data pipelines"
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "sql",
    "lineage",
    "data-pipeline",
    "dag",
    "dependency",
    "database",
    "etl",
    "data-engineering"
]

dependencies = []

[project.scripts]
sqlh = "sqllineage.cli:main"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = ""
module-name = "sqllineage"
