[project]
name = "sqlh"
version = "0.2.7"
maintainers = [
  {name = "Perry DU", email = "duneite@gmail.com"}
]
description = "A lightweight SQL lineage analysis library for tracking table dependencies in data pipelines"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "sql",
    "lineage",
    "data-pipeline",
    "dag",
    "dependency",
    "database",
    "etl",
    "data-engineering"
]

dependencies = []

[project.scripts]
sqlh = "sqlh.cli:main"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = ""
module-name = "sqlh"
